Implement the endpoint list inactive
